<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/crime_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/plant_photo_no_image_description"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/crime_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/plant_photo_button_description"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plant_title_label" />

            <EditText
                android:id="@+id/plant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plant_title_hint" />
        </LinearLayout>

    </LinearLayout>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_details_label" />

    <Button
        android:id="@+id/plant_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed Nov 14 11:56 EST 2018" />

    <CheckBox
        android:id="@+id/plant_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_solved_label" />

    <Button
        android:id="@+id/share_with"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Share_with_contacts" />

    <Button
        android:id="@+id/plant_submission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_submit_text" />

</LinearLayout>